--- a/anaData/MariscalDataExploration.ipynb
+++ b/anaData/MariscalDataExploration.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,12 @@
     "import matplotlib.pyplot as plt\n",
     "import pickle\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "import scipy.spatial as sp"
+    "import scipy.spatial as sp\n",
+    "import geopandas as gpd\n",
+    "import rasterio\n",
+    "import rasterio.plot\n",
+    "import copy\n",
+    "import random"
    ]
   },
   {
@@ -1364,17 +1369,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "R",
-   "language": "R",
-   "name": "ir"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": "r",
-   "file_extension": ".r",
-   "mimetype": "text/x-r-source",
-   "name": "R",
-   "pygments_lexer": "r",
-   "version": "3.6.3"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
