update notebook with mantels

--- a/anaData/MariscalDataExploration.ipynb
+++ b/anaData/MariscalDataExploration.ipynb
@@ -17,7 +17,9 @@
     "\n",
     "[hierarchical clustering of sites](#hierarch)\n",
     "\n",
-    "[Indicator species analysis](#indSpp)"
+    "[Indicator species analysis](#indSpp)\n",
+    "\n",
+    "[Mantel tests](#mantel)\n"
    ]
   },
   {
@@ -2966,7 +2968,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3065,6 +3069,13 @@
    ],
    "source": [
     "summary(clustIndSpp)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[back to top](#contents)"
    ]
   },
   {
@@ -3264,7 +3275,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3327,6 +3340,13 @@
    ],
    "source": [
     "all_mant_test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[back to top](#contents)"
    ]
   },
   {
