juv analysis revised, start on watersheds

--- a/anaData/MariscalDataExploration.ipynb
+++ b/anaData/MariscalDataExploration.ipynb
@@ -2678,7 +2678,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -2722,6 +2722,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='actMap'></a>\n",
     "Will make a legend separately, can't seem to make it work in python or R easily right now. Colors correspond to the hierarchical clustering results graphic above: \n",
     "\n",
     "1=black  \n",
@@ -4378,6 +4379,13 @@
    "source": [
     "sigMEM <- mem.comM.sel$MEM.select\n",
     "#save(sigMEM, file='sigMEM.rda')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can look at a physical map [here](#actMap). "
    ]
   },
   {
