checking southeast pourpoint for watershed delineations

--- a/anaData/MariscalDataExploration.ipynb
+++ b/anaData/MariscalDataExploration.ipynb
@@ -7149,7 +7149,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -7223,6 +7225,133 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " adultosDejovenes.csv                     \u001b[0m\u001b[01;35mjovenesLeavingNestClusterNMS.png\u001b[0m\n",
+      " allSAC.csv                               \u001b[01;35mjovenesNMS.png\u001b[0m\n",
+      " anaAnalysis.txt                          justGrowthForm.tsv\n",
+      " anaDataMap.qgz                           juvClustIndSpp.rda\n",
+      " \u001b[01;34manaEmail_july\u001b[0m                            juvComm.csv\n",
+      " anaManuscript.odt                        juvCommHierClust.rda\n",
+      " AnaPointsMap.pdf                         juvCommPCA.rda\n",
+      " \u001b[01;35manaSAC.svg\u001b[0m                               juvNMS.rda\n",
+      " anaSubparcelSAC.pdf                      juvSpecClustMap.rda\n",
+      " BaseDeDatosCedrosEnvaSarah7012012.xlsx   juvSpecObs.csv\n",
+      " BC_comm.csv                              lcPolyGetCoords.R\n",
+      " BC_SAC.csv                               lcPolyMoved.rda\n",
+      " BittyLosCedrosPlants.xlsx                lcPoly.rda\n",
+      " BS_comm.csv                              \u001b[01;35mlcSAC.svg\u001b[0m\n",
+      " BS_SAC.csv                               \u001b[01;35mlcTreeTurnover.svg\u001b[0m\n",
+      " CedrosArbJuvBosq.csv                     lookingForDups.txt\n",
+      " CedrosArbJuvReg.csv                      \u001b[01;35mLosCedAster.tif\u001b[0m\n",
+      " CedrosBosqCircPlots.csv                  LosCedAster.tif.aux.xml\n",
+      " CedrosFinalReview.7022012.xlsx           lw.rda\n",
+      " CedrosFinalReview.csv                    MariscalDataExploration.ipynb\n",
+      " CedrosRegCircPlots.csv                   mem.comM.sel\n",
+      " cGroup.csv                               \u001b[01;35mMEMDiagram.png\u001b[0m\n",
+      " cGroup.rda                               newGeneraForBitty.csv\n",
+      " checkForIxoroideae.txt                   \u001b[01;35mNMSSummaryGraphic.png\u001b[0m\n",
+      " CLB_comm.csv                             \u001b[01;35mNMSSummaryGraphic.svg\u001b[0m\n",
+      " CLB_SAC.csv                              OFnms.rda\n",
+      " \u001b[01;35mclusterGroupMap4groups.png\u001b[0m               oldForestComm.rda\n",
+      " comboInfo.rda                            oldForestEnv.rda\n",
+      " \u001b[01;35mcomboJuvAdultClustNMS.png\u001b[0m                \u001b[01;35moldForestNMSelevClust.png\u001b[0m\n",
+      " comboMat.csv                             oldForestSp.rda\n",
+      " comboNMS_noOut.rda                       \u001b[01;35moldForestTurn.png\u001b[0m\n",
+      " comboNMS.rda                             oldGeneraDifferentSpp4bitty.csv\n",
+      " comboSACs.pdf                            predYs.csv\n",
+      " comMsimps.csv                            primenetNMSbyHabitat.pdf\n",
+      " coordinateComparison.csv                 pts.csv\n",
+      " \u001b[01;35mcourtSlideGraphic.png\u001b[0m                    ptsmxmy.rda\n",
+      " \u001b[01;34mdoi_10.5061_dryad.3nr41__v1\u001b[0m              RCA_comm.csv\n",
+      " envOnly.csv                              RCA_SAC.csv\n",
+      " envOnly.p                                RG_comm.csv\n",
+      "'et_alpha(0)'                             RG_SAC.csv\n",
+      " finalReport2012Coords.csv                \u001b[01;35mRpch.png\u001b[0m\n",
+      " foundGenera.txt                          sigMEM.rda\n",
+      " fullCommNMS.rda                          specObs.csv\n",
+      " \u001b[01;34mGIS\u001b[0m                                      specpool.csv\n",
+      " \u001b[01;35mGPSFinalReviewVersion.png\u001b[0m                subParcelComm.csv\n",
+      " GPSpointsCedrosHoja1.csv                 subParcelSpatial.csv\n",
+      " \u001b[01;35mGPSpointsCedrosMapHoja1.png\u001b[0m              subParcelSpatial.p\n",
+      " GPSpointsCedros.xls                      \u001b[01;35mturnoverByHabitat.png\u001b[0m\n",
+      " habSpRich.csv                           'ubplots(figsize=(8,6))'\n",
+      " habSRestimates.txt                       \u001b[01;35mwardCluster.png\u001b[0m\n",
+      " \u001b[01;35mhabtype2naturalClusterJuv.png\u001b[0m            whatAreThesePlotsMap4Jose.pdf\n",
+      " \u001b[01;35mhclust4groups.png\u001b[0m                        \u001b[01;35mwhatAreThesePlotsMap4Jose.png\u001b[0m\n",
+      " \u001b[01;35mhclust_4groups_PsubP.png\u001b[0m                 \u001b[01;35mwholeCommMEMS.png\u001b[0m\n",
+      " jitteredPoints.rda\n",
+      " adultosDejovenes.csv                     \u001b[0m\u001b[01;35mjovenesLeavingNestClusterNMS.png\u001b[0m\n",
+      " allSAC.csv                               \u001b[01;35mjovenesNMS.png\u001b[0m\n",
+      " anaAnalysis.txt                          justGrowthForm.tsv\n",
+      " anaDataMap.qgz                           juvClustIndSpp.rda\n",
+      " \u001b[01;34manaEmail_july\u001b[0m                            juvComm.csv\n",
+      " anaManuscript.odt                        juvCommHierClust.rda\n",
+      " AnaPointsMap.pdf                         juvCommPCA.rda\n",
+      " \u001b[01;35manaSAC.svg\u001b[0m                               juvNMS.rda\n",
+      " anaSubparcelSAC.pdf                      juvSpecClustMap.rda\n",
+      " BaseDeDatosCedrosEnvaSarah7012012.xlsx   juvSpecObs.csv\n",
+      " BC_comm.csv                              lcPolyGetCoords.R\n",
+      " BC_SAC.csv                               lcPolyMoved.rda\n",
+      " BittyLosCedrosPlants.xlsx                lcPoly.rda\n",
+      " BS_comm.csv                              \u001b[01;35mlcSAC.svg\u001b[0m\n",
+      " BS_SAC.csv                               \u001b[01;35mlcTreeTurnover.svg\u001b[0m\n",
+      " CedrosArbJuvBosq.csv                     lookingForDups.txt\n",
+      " CedrosArbJuvReg.csv                      \u001b[01;35mLosCedAster.tif\u001b[0m\n",
+      " CedrosBosqCircPlots.csv                  LosCedAster.tif.aux.xml\n",
+      " CedrosFinalReview.7022012.xlsx           lw.rda\n",
+      " CedrosFinalReview.csv                    MariscalDataExploration.ipynb\n",
+      " CedrosRegCircPlots.csv                   mem.comM.sel\n",
+      " cGroup.csv                               \u001b[01;35mMEMDiagram.png\u001b[0m\n",
+      " cGroup.rda                               newGeneraForBitty.csv\n",
+      " checkForIxoroideae.txt                   \u001b[01;35mNMSSummaryGraphic.png\u001b[0m\n",
+      " CLB_comm.csv                             \u001b[01;35mNMSSummaryGraphic.svg\u001b[0m\n",
+      " CLB_SAC.csv                              OFnms.rda\n",
+      " \u001b[01;35mclusterGroupMap4groups.png\u001b[0m               oldForestComm.rda\n",
+      " comboInfo.rda                            oldForestEnv.rda\n",
+      " \u001b[01;35mcomboJuvAdultClustNMS.png\u001b[0m                \u001b[01;35moldForestNMSelevClust.png\u001b[0m\n",
+      " comboMat.csv                             oldForestSp.rda\n",
+      " comboNMS_noOut.rda                       \u001b[01;35moldForestTurn.png\u001b[0m\n",
+      " comboNMS.rda                             oldGeneraDifferentSpp4bitty.csv\n",
+      " comboSACs.pdf                            predYs.csv\n",
+      " comMsimps.csv                            primenetNMSbyHabitat.pdf\n",
+      " coordinateComparison.csv                 pts.csv\n",
+      " \u001b[01;35mcourtSlideGraphic.png\u001b[0m                    ptsmxmy.rda\n",
+      " \u001b[01;34mdoi_10.5061_dryad.3nr41__v1\u001b[0m              RCA_comm.csv\n",
+      " envOnly.csv                              RCA_SAC.csv\n",
+      " envOnly.p                                RG_comm.csv\n",
+      "'et_alpha(0)'                             RG_SAC.csv\n",
+      " finalReport2012Coords.csv                \u001b[01;35mRpch.png\u001b[0m\n",
+      " foundGenera.txt                          sigMEM.rda\n",
+      " fullCommNMS.rda                          specObs.csv\n",
+      " \u001b[01;34mGIS\u001b[0m                                      specpool.csv\n",
+      " \u001b[01;35mGPSFinalReviewVersion.png\u001b[0m                subParcelComm.csv\n",
+      " GPSpointsCedrosHoja1.csv                 subParcelSpatial.csv\n",
+      " \u001b[01;35mGPSpointsCedrosMapHoja1.png\u001b[0m              subParcelSpatial.p\n",
+      " GPSpointsCedros.xls                      \u001b[01;35mturnoverByHabitat.png\u001b[0m\n",
+      " habSpRich.csv                           'ubplots(figsize=(8,6))'\n",
+      " habSRestimates.txt                       \u001b[01;35mwardCluster.png\u001b[0m\n",
+      " \u001b[01;35mhabtype2naturalClusterJuv.png\u001b[0m            whatAreThesePlotsMap4Jose.pdf\n",
+      " \u001b[01;35mhclust4groups.png\u001b[0m                        \u001b[01;35mwhatAreThesePlotsMap4Jose.png\u001b[0m\n",
+      " \u001b[01;35mhclust_4groups_PsubP.png\u001b[0m                 \u001b[01;35mwholeCommMEMS.png\u001b[0m\n",
+      " jitteredPoints.rda\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls --color=always\n",
+    "ls"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -7230,17 +7359,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "R",
-   "language": "R",
-   "name": "ir"
+   "display_name": "Bash",
+   "language": "bash",
+   "name": "bash"
   },
   "language_info": {
-   "codemirror_mode": "r",
-   "file_extension": ".r",
-   "mimetype": "text/x-r-source",
-   "name": "R",
-   "pygments_lexer": "r",
-   "version": "3.6.3"
+   "codemirror_mode": "shell",
+   "file_extension": ".sh",
+   "mimetype": "text/x-sh",
+   "name": "bash"
   }
  },
  "nbformat": 4,
